--- a/Lalisa-page/views/index.html
+++ b/Lalisa-page/views/index.html
@@ -577,7 +577,7 @@
                                             
                                             <div class="author_blog">
                                                 <div class="author_avatar">
-                                                    <img src="./assets/img/avatar_author.png" alt="">
+                                                    <img src="../assets/img/avatar_author.png" alt="">
                                                 </div>
                                                 <a href=""><p class="title_text">By Michaela Augus</p></a>
                                                 <p class="description_text date_create">Friday, 1 April 2022</p>
