--- a/Lalisa-page/views/product.html
+++ b/Lalisa-page/views/product.html
@@ -180,7 +180,7 @@
                                     <a href=""><p class="description_text">Chair</p></a>
                                 </div>
                                 <div class="name_product">
-                                    <a href=""><p class="title_text">White Aesthetic Chair</p></a>
+                                    <a href="detail_product.html"><p class="title_text">White Aesthetic Chair</p></a>
                                 </div>
                                 <div class="detail_product">
                                     <p class="description_text">Combination of wood and wool</p>
