--- a/Lalisa-page/assets/scss/footer.scss
+++ b/Lalisa-page/assets/scss/footer.scss
@@ -91,8 +91,7 @@
     .block_footer {
 
         .container {
-            padding-right: 15px;
-            padding-left: 15px;
+            padding: 20px 15px ;
         }
     }
 
