--- a/Lalisa-page/assets/scss/header.scss
+++ b/Lalisa-page/assets/scss/header.scss
@@ -35,6 +35,7 @@ li.nav-item .nav-link {
 
 @media (max-width: 992px) {
     .navbar-expand-lg {
+        padding: 15px;
         
         .navbar-nav {
             align-items: center;
