--- a/Lalisa-page/assets/scss/detail_product.scss
+++ b/Lalisa-page/assets/scss/detail_product.scss
@@ -25,6 +25,10 @@
     line-height: 130%;
     font-size: 44px;
     color: #151411;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
 }
 
 .description_text {
@@ -33,6 +37,10 @@
     font-weight: 500;
     line-height: 180%;
     font-size: 18px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
 }
 
 .btn_group {
@@ -157,6 +165,14 @@
 
     .box_list_items{
         margin-top: 30px;
+
+        .col-md-4 {
+            flex-basis: 50%;
+
+            &:nth-child(4) {
+                display: none;
+            }
+        }
     }
 
 }
@@ -248,6 +264,14 @@
         }
     }
 
+    .list_color {
+
+        .color {
+            width: 30px !important;
+            height: 30px !important;
+        }
+    }
+
     .group_button{
         margin-top: 30px;
 
@@ -258,4 +282,35 @@
             }
         }
     }
+
+    .box_list_items{
+
+        .col-md-4 {
+
+            &:nth-child(4) {
+                display: block !important;
+            }
+        }
+    }
+}
+
+
+@media screen and (max-width:599px) {
+
+ 
+
+    .title_text {
+        font-size: 14px !important;
+    }
+
+    .description_text {
+        font-size: 12px;
+    }
+    
+    .btn_group {
+        padding: 15px 26px;
+        font-size: 12px ;
+    }
+
+
 }
