--- a/Lalisa-page/views/detail_product.html
+++ b/Lalisa-page/views/detail_product.html
@@ -175,6 +175,25 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="col-md-4">
+                            <div class="box_product">
+                                <div class="product_picture">
+                                    <img src="../assets/img/item.png" alt="Product">
+                                </div>
+                                <div class="cate_product">
+                                    <a href=""><p class="description_text">Decoration</p></a>
+                                </div>
+                                <div class="name_product">
+                                    <a href=""><p class="title_text">Oval Gold Mirror</p></a>
+                                </div>
+                                <div class="detail_product">
+                                    <p class="description_text">Combination of wood and wool</p>
+                                </div>
+                                <div class="product_cost">
+                                    <p class="title_text">$32.43</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
