--- a/Lalisa-page/views/product.html
+++ b/Lalisa-page/views/product.html
@@ -72,57 +72,52 @@
                 </div>
             </div>
             <div class="box_banner_photo">
-                <div class="swiper banner_list_product">
-                   <div class="swiper-wrapper">
-                        <div class="small_banner swiper-slide">
-                            <div class="banner_pic">
-                                <img src="../assets/img/banner_product.png" alt="">
+                <div class="banner_list_product">
+                    <div class="small_banner">
+                        <div class="banner_pic">
+                            <img src="../assets/img/banner_product.png" alt="">
+                        </div>
+                        <div class="detail_banner carousel-caption align-items-center d-md-block container">
+                            <div class="button_group">
+                                <a href="" class="btn btn_group">Discount</a>
                             </div>
-                            <div class="detail_banner carousel-caption align-items-center d-none d-md-block container">
-                                <div class="button_group">
-                                    <a href="" class="btn btn_group">Discount</a>
-                                </div>
-                                <div class="title_banner">
-                                    <p class="title_text">Ramadhan Sale Offer</p>
-                                    <p class="description_text">Get 40% off for the first transaction
-                                        on Lalasia</p>
-                                </div>
+                            <div class="title_banner">
+                                <p class="title_text">Ramadhan Sale Offer</p>
+                                <p class="description_text">Get 40% off for the first transaction
+                                    on Lalasia</p>
                             </div>
                         </div>
-                        <div class="small_banner swiper-slide">
-                            <div class="banner_pic">
-                                <img src="../assets/img/banner_product.png" alt="">
+                    </div>
+                    <div class="small_banner">
+                        <div class="banner_pic">
+                            <img src="../assets/img/banner_product.png" alt="">
+                        </div>
+                        <div class="detail_banner carousel-caption align-items-center d-md-block container">
+                            <div class="button_group">
+                                <a href="" class="btn btn_group">Discount</a>
                             </div>
-                            <div class="detail_banner carousel-caption align-items-center d-none d-md-block container">
-                                <div class="button_group">
-                                    <a href="" class="btn btn_group">Discount</a>
-                                </div>
-                                <div class="title_banner">
-                                    <p class="title_text">Ramadhan Sale Offer</p>
-                                    <p class="description_text">Get 40% off for the first transaction
-                                        on Lalasia</p>
-                                </div>
+                            <div class="title_banner">
+                                <p class="title_text">Ramadhan Sale Offer</p>
+                                <p class="description_text">Get 40% off for the first transaction
+                                    on Lalasia</p>
                             </div>
                         </div>
-                        <div class="small_banner swiper-slide">
-                            <div class="banner_pic">
-                                <img src="../assets/img/banner_product.png" alt="">
+                    </div>
+                    <div class="small_banner">
+                        <div class="banner_pic">
+                            <img src="../assets/img/banner_product.png" alt="">
+                        </div>
+                        <div class="detail_banner carousel-caption align-items-center d-md-block container">
+                            <div class="button_group">
+                                <a href="" class="btn btn_group">Discount</a>
                             </div>
-                            <div class="detail_banner carousel-caption align-items-center d-none d-md-block container">
-                                <div class="button_group">
-                                    <a href="" class="btn btn_group">Discount</a>
-                                </div>
-                                <div class="title_banner">
-                                    <p class="title_text">Ramadhan Sale Offer</p>
-                                    <p class="description_text">Get 40% off for the first transaction
-                                        on Lalasia</p>
-                                </div>
+                            <div class="title_banner">
+                                <p class="title_text">Ramadhan Sale Offer</p>
+                                <p class="description_text">Get 40% off for the first transaction
+                                    on Lalasia</p>
                             </div>
                         </div>
-                   </div>
-                   <div class="swiper-button-next"></div>
-                    <div class="swiper-button-prev"></div>
-                    <div class="swiper-pagination"></div>
+                    </div>
                 </div>
             </div>
 
@@ -335,6 +330,26 @@
                             <div class="box_product">
                                 <div class="product_picture">
                                     <img src="../assets/img/product_demo10.png" alt="Product">
+                                </div>
+                                <div class="cate_product">
+                                    <a href=""><p class="description_text">Decoration </p></a>
+                                </div>
+                                <div class="name_product">
+                                    <a href=""><p class="title_text">Oval Gold Mirror</p></a>
+                                </div>
+                                <div class="detail_product">
+                                    <p class="description_text">Combination of wood and wool</p>
+                                </div>
+                                <div class="product_cost">
+                                    <p class="title_text">$32.43</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4">
+                            <div class="box_product">
+                                <div class="product_picture">
+                                    <img src="../assets/img/product_demo1.png" alt="Product">
                                 </div>
                                 <div class="cate_product">
                                     <a href=""><p class="description_text">Decoration </p></a>
