--- a/Lalisa-page/views/services.html
+++ b/Lalisa-page/views/services.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../assets/css/slick-theme.css">
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="../assets/css/product.css">
+    <link rel="stylesheet" href="../assets/css/services.css">
 
 </head>
 
@@ -43,10 +43,10 @@
                         </ul>
                         <div class="my-2 my-lg-0">
                             <div class="options_navbar">
-                                <a class="icon_option" href="">
+                                <a class="icon_option" href="#">
                                     <img src="../assets/img/cart.png" alt="">
                                 </a>
-                                <a class="icon_option" href="">
+                                <a class="icon_option" href="#">
                                     <img src="../assets/img/user.png" alt="">
                                 </a>
                             </div>
@@ -58,7 +58,176 @@
     </header>
 
     <main>
-    
+        <section class="block_banner">
+            <div class="container">
+                <div class="box_banner_text">
+                    <div class="banner_title">
+                        <h1 class="banner_title_text title_text">Services</h1>
+                    </div>
+                    <div class="banner_des">
+                        <p class="description_text">The product crafted by talented crafter and using high quality material with love inside</p>
+                    </div>
+                </div>
+                <div class="box_banner_photo">
+                    <img src="../assets/img/banner_service.png" alt="">
+                </div>
+
+                <div class="services">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="box_service">
+                                <div class="numb">
+                                    <p class="title_text">01</p>
+                                </div>
+                                <div class="name_service">
+                                    <p class="title_text">Furniture</p>
+                                </div>
+                                <div class="detail_service">
+                                    <p class="description_text">At the ultimate smart home, you're met with technology before you even step through the front door. </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="box_service">
+                                <div class="numb">
+                                    <p class="title_text">02</p>
+                                </div>
+                                <div class="name_service">
+                                    <p class="title_text">Home Decoration</p>
+                                </div>
+                                <div class="detail_service">
+                                    <p class="description_text">Create A Calming Summer Escape With Our Luxurious Home Accessories For The Balmy Evenings. </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="box_service">
+                                <div class="numb">
+                                    <p class="title_text">03</p>
+                                </div>
+                                <div class="name_service">
+                                    <p class="title_text">Kitchen Cabinet</p>
+                                </div>
+                                <div class="detail_service">
+                                    <p class="description_text">Introducing the modular kitchen cabinet system. Start with our huge selection of base and wall cabinets.  </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="box_service">
+                                <div class="numb">
+                                    <p class="title_text">04</p>
+                                </div>
+                                <div class="name_service">
+                                    <p class="title_text">Interior Design</p>
+                                </div>
+                                <div class="detail_service">
+                                    <p class="description_text">Innovative products often feature innovative designs that play with the patterns we are familiar.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="box_service">
+                                <div class="numb">
+                                    <p class="title_text">05</p>
+                                </div>
+                                <div class="name_service">
+                                    <p class="title_text">Exterior Design</p>
+                                </div>
+                                <div class="detail_service">
+                                    <p class="description_text">At the ultimate smart home, you're met with technology before you even step through the front door. </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="box_service">
+                                <div class="numb">
+                                    <p class="title_text">06</p>
+                                </div>
+                                <div class="name_service">
+                                    <p class="title_text">Custom Furniture</p>
+                                </div>
+                                <div class="detail_service">
+                                    <p class="description_text">With Quality Materials and Modern Designs, we have Designs for all Tastes. we bring you World Class Designs.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+        <section class="block_portofolio">
+            <div class="container">
+                <div class="block_benefits_title">
+                    <p class="block_title">Portofolio</p>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-5">
+                        <div class="box_porto_title">
+                            <p class="title_text">Amazing project we’ve
+                                done before</p>
+                        </div>
+                    </div>
+                    <div class="col-md-7">
+                        <div class="content">
+                            <p class="description_text">Pellentesque etiam blandit in tincidunt at donec. Eget ipsum dignissim placerat nisi, adipiscing mauris non.</p>
+                            <a href="#"><p class="title_text">View Portofolio</p></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="list_porto">
+                    <div class="row">
+                        <div class="col-xl-5">
+                            <div class="box_porto">
+                                <div class="porto_img">
+                                    <img src="../assets/img/porta_img.png" alt="">
+                                </div>
+                                <div class="porto_title">
+                                    <a href="#" class="title_text">Siska Kohl’s Bedroom</a>
+                                    <p class="description_text">We start renovating her bedroom with minimalist concept and using combination white and wooden material</p>
+                                    <a href="#" class="description_text">See Detail</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-7">
+                            <div class="box_porto">
+                                <div class="porto_img">
+                                    <img src="../assets/img/porta_img2.png" alt="">
+                                </div>
+                                <div class="porto_title">
+                                    <a href="#" class="title_text">Jeruk Veldevana Living Room Design</a>
+                                    <p class="description_text">We start renovating her bedroom with minimalist concept and using combination white and wooden material</p>
+                                    <a href="#" class="description_text">See Detail</a>
+                                </div>
+                            </div>
+                            <div class="box_porto">
+                                <div class="porto_img">
+                                    <img src="../assets/img/porta_img3.png" alt="">
+                                </div>
+                                <div class="porto_title">
+                                    <a href="#" class="title_text">Cozy Co-working space</a>
+                                    <p class="description_text">We start renovating her bedroom with minimalist concept and using combination white and wooden material</p>
+                                    <a href="#" class="description_text">See Detail</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="talk">
+                    <div class="talk_title">
+                        <p class="title_text">Are you interested
+                            work with us?</p>
+                    </div>
+                    <div class="button_talk">
+                        <a href="#" class="btn btn_group">Let’s Talk <img src="../assets/img/arrow-right.png" alt=""></a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     
     <footer>
@@ -76,10 +245,10 @@
                                 <p class="title_text"><a href="product.html">Product</a></p>
                             </div>
                             <div class="list_services">
-                                <a href=""><p class="description_text">New Arrivals</p></a>
-                                <a href=""><p class="description_text">Best Selling</p></a>
-                                <a href=""><p class="description_text">Home Decor</p></a>
-                                <a href=""><p class="description_text">Kitchen Set</p></a>
+                                <a href="#"><p class="description_text">New Arrivals</p></a>
+                                <a href="#"><p class="description_text">Best Selling</p></a>
+                                <a href="#"><p class="description_text">Home Decor</p></a>
+                                <a href="#"><p class="description_text">Kitchen Set</p></a>
                             </div>
                         </div>
                         <div class="detial_service">
@@ -87,10 +256,10 @@
                                 <p class="title_text"><a href="services.html ">Services</p></a>
                             </div>
                             <div class="list_services">
-                                <a href=""><p class="description_text">Catalog</p></a>
-                                <a href=""><p class="description_text">Blog</p></a>
-                                <a href=""><p class="description_text">FaQ</p></a>
-                                <a href=""><p class="description_text">Pricing</p></a>
+                                <a href="#"><p class="description_text">Catalog</p></a>
+                                <a href="#"><p class="description_text">Blog</p></a>
+                                <a href="#"><p class="description_text">FaQ</p></a>
+                                <a href="#"><p class="description_text">Pricing</p></a>
                             </div>
                         </div>
                         <div class="detial_service">
@@ -98,9 +267,9 @@
                                 <p class="title_text">Follow Us</p>
                             </div>
                             <div class="list_services">
-                                <a href=""><p class="description_text">Facebook</p></a>
-                                <a href=""><p class="description_text">Instagram</p></a>
-                                <a href=""><p class="description_text">Twitter</p></a>
+                                <a href="#"><p class="description_text">Facebook</p></a>
+                                <a href="#"><p class="description_text">Instagram</p></a>
+                                <a href="#"><p class="description_text">Twitter</p></a>
                             </div>
                         </div>
                     </div>
