--- a/Lalisa-page/views/article.html
+++ b/Lalisa-page/views/article.html
@@ -69,7 +69,7 @@
                     </div>
                 </div>
                 <div class="list_article">
-                   <div class="banner">
+                    <div class="banner">
                         <div class="box_banner_photo">
                             <img src="../assets/img/banner_article.png" alt="">
                         </div>
@@ -78,27 +78,59 @@
                                 <a href=""><p class="description_text">Tips and Trick</p></a>
                             </div>
                             <div class="name_blog">
-                                <a href=""><p class="title_text">6 ways to give your home minimalistic vibes</p></a>
+                                <a href=""><p class="title_text">This 400-Square-Foot New York Apartment Is Maximized With
+                                    Custom Millwork</p></a>
                             </div>
-                            <div class="content_blog">
-                                <p class="description_text summary_blog">Pellentesque etiam blandit in 
-                                    tincidunt at donec. Eget ipsum .</p>
-                            </div>
-                            
                             <div class="author_blog">
                                 <div class="author_avatar">
                                     <img src="../assets/img/avatar_author.png" alt="">
                                 </div>
-                                <p class="title_text">By Jerremy Jean</p>
+                                <p class="title_text">By Morgan Goldberg</p>
                                 <p class="description_text date_create">Friday, 1 April 2022</p>
                             </div>
                         </div>
                    </div>
+                   <div class="banner">
                     <div class="box_banner_photo">
                         <img src="../assets/img/banner_article.png" alt="">
                     </div>
+                    <div class="detail_blog">
+                        <div class="cate_blog">
+                            <a href=""><p class="description_text">Tips and Trick</p></a>
+                        </div>
+                        <div class="name_blog">
+                            <a href=""><p class="title_text">This 400-Square-Foot New York Apartment Is Maximized With
+                                Custom Millwork</p></a>
+                        </div>
+                        <div class="author_blog">
+                            <div class="author_avatar">
+                                <img src="../assets/img/avatar_author.png" alt="">
+                            </div>
+                            <p class="title_text">By Morgan Goldberg</p>
+                            <p class="description_text date_create">Friday, 1 April 2022</p>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="banner">
                     <div class="box_banner_photo">
                         <img src="../assets/img/banner_article.png" alt="">
+                    </div>
+                    <div class="detail_blog">
+                        <div class="cate_blog">
+                            <a href=""><p class="description_text">Tips and Trick</p></a>
+                        </div>
+                        <div class="name_blog">
+                            <a href=""><p class="title_text">This 400-Square-Foot New York Apartment Is Maximized With
+                                Custom Millwork</p></a>
+                        </div>
+                        <div class="author_blog">
+                            <div class="author_avatar">
+                                <img src="../assets/img/avatar_author.png" alt="">
+                            </div>
+                            <p class="title_text">By Morgan Goldberg</p>
+                            <p class="description_text date_create">Friday, 1 April 2022</p>
+                        </div>
+                    </div>
                     </div>
                 </div>
                 
