--- a/Lalisa-page/css/home.css
+++ b/Lalisa-page/css/home.css
@@ -13,204 +13,575 @@ a {
 body {
 	font-family: Eudoxus Sans;
 }
-.hd-box-img {
-	width: 40px;
+@media (min-width:320px) {
+	.hd-box-img {
+		width: 40px;
+		flex-shrink: 0;
+	}
+	.header-box {
+		border-bottom: 1px #ccc solid;
+		margin-bottom: 60px;
+	}
+	.hd-title-box {
+		margin-bottom: 0;
+	}
+	.hd-title {
+		color: #151411;
+		font-size: 22px;
+		font-weight: 600;
+	}
+	.hd-title2 {
+		list-style: none;
+	}
+	.hd-title3 {
+		color: black;
+		font-size: 18px;
+		font-weight: 500;
+	}
+	/*ctn-box-item*/
+	.ctn-box-item {
+		width: 724px;
+		text-align: center;
+	}
+	.ctn-title-box {
+		margin-bottom: 50px;
+	}
+	.ctn-title {
+		font-size: 64px;
+		font-weight: 700;
+		margin-bottom: 0;
+		color: #151411;
+	}
+	.ctn-title2 {
+		color: #AFADB5;
+		font-size: 18px;
+		line-height: 1.8;
+	}
+	.ctn-input {
+		width: 810px;
+		height: 84px;
+		border: none;
+		outline: none;
+		box-shadow: 2px 2px 10px #ccc;
+		padding-left: 90px;
+		font-size: 18px;
+	}
+	.ctn-input-box {
+		top: 0;
+		left: 50%;
+		transform: translateX(-50%);
+	}
+	.ctn-img-box2 {
+		top: 50%;
+		left: 5%;
+		transform: translateY(-50%);
+		width: 32px;
+	}
+	.ctn-title-box2{
+		top: 50%;
+		transform: translateY(-50%);
+		right: 5%;
+		background: #518581;
+		width: 170px;
+		height: 54px;
+	}
+	.ctn-title3 {
+		color: #fff;
+		line-height: 55px;
+		font-size: 18px;
+		font-weight: 600;
+	}
+	.ctn-seach {
+		margin-bottom: 120px;
+	}
+	/*ctnbn*/
+	.ctn-bn-box {
+		color: #FFB23F;
+		font-size: 18px;
+		font-weight: 500;
+	}
+	.ctn-sao {
+		width: 51px;
+		top: 60%;
+		transform: translateY(-60%);
+		right: 3%;
+	}
+	.ctn-vong {
+		left: 15%;
+		top: 80%;
+		transform: translate(-15%, -80%);
+	}
+	.ctn-bn {
+		margin-bottom: 150px;
+	}
+	.ctn-bn-title4 , .ctn-bn-title5 {
+		width: 400px;
+	}
+	.ctn-title4 {
+		font-size: 44px;
+		font-weight: 600;
+		color: black;
+		margin-bottom: 0;
+	}
+	.ctn-title5 {
+		font-size: 18px;
+		color: #AFADB5;
+		line-height: 1.6;
+	}
+	.ctn-title6 {
+		font-size: 24px;
+		font-weight: 600;
+		color: #151411;
+	}
+	.ctn-title7 {
+		font-size: 17px;
+		color: #AFADB5;
+	}
+	/*ctn-box-img*/
+	.ctn-box-item2 {
+		box-shadow: 1px 1px 8px #ccc;
+		height: 285px;
+		padding: 0 13px;
+	}
+	.ctn-box-img {
+		width: 62px;
+		padding-top: 30px;
+	}
+	/*product*/ 
+	.product-box-title {
+		font-size: 44px;
+		color: #151411;
+		font-weight: 600;
+	}
+	.product-box-title2 {
+		width: 656px;
+		text-align: center;
+	}
+	.product-title {
+		font-size: 18px;
+		color: #AFADB5;
+		line-height: 1.8;
+	}
+	/*slide*/
+	.slide-box {
+		margin-bottom: 100px;
+	}
+	.sw-item {
+		height: 320px;
+	}
+	.slide-title {
+		font-size: 18px;
+		color: #AFADB5;
+	}
+	.slide-title2 {
+		font-size: 26px;
+		font-weight: 700;
+		color: #151411;
+		margin-bottom: 0;
+	}
+	.slide-title3 {
+		font-size: 24px;
+		color: #151411;
+		font-weight: 700;
+		margin-bottom: 0;
+	}
+	/*ourproduct-bn-title*/
+	.ourproduct {
+		margin-bottom: 100px;
+	}
+	.ourproduct-bn-title {
+		width: 450px;
+	}
+	.ourproduct-title {
+		flex-direction: column;
+		text-align: center;
+		margin-left: 50px;
+	}
+	.ourproduct-title2 {
+		font-size: 44px;
+		color: #151411;
+		font-weight: 600;
+	}
+	.ourproduct-title3-box {
+		background: #518581;
+		padding: 18px 34px;
+		text-align: center;
+	}
+	.ourproduct-img {
+		width: 540px;
+		height: 220px;
+	}
+	.ourproduct-img2 {
+		width: 540px;
+		height: 500px;
+	}
+	.ourproduct-img3 {
+		width: 50px;
+	}
+	.ourslide-item {
+		box-shadow: 2px 2px 10px #ccc;
+	}
+	.ourslide-title {
+		font-size: 20px;
+		color: #151411;
+		font-weight: 700;
+	}
+	.testimonials-start {
+		justify-content: end;
+	}
+	.testimonials-start {
+		color: #FFB23F;
+	}
+	.testimonials-title {
+		font-size: 18px;
+		color: #151411;
+		font-weight: 700;
+	}
+	/*ourslide-title-box*/
+	.ourslide-title-box {
+		width: 497px;
+	}
+	.ourslide-item {
+		margin: 20px;
+		padding: 20px;
+	}
+	.testimonials-slide {
+		margin-bottom: 120px;
+	}
+	/*articles-title*/
+	.articles {
+		margin-bottom: 60px;
+	}
+	.articles-group , .articles-group2 {
+		margin-bottom: 90px;
+	}
+	.articles-slide-img {
+		height: 450px;
+	}
+	.sw-articles-titile {
+		font-size: 26px;
+		font-weight: 700;
+		color: #fff;
+	}
+	.sw-articles-titile2 {
+		font-size: 18px;
+		color: #fff
+	}
+	.sw-articles-titile3 {
+		font-size: 18px;
+		color: #fff;
+		opacity: 0.7;
+	}
+	.sw-articles-titile4 {
+		color: black;
+	}
+	.sw-articles-titile5 {
+		color: #151411;
+		opacity: 0.7;
+		font-weight: 700;
+	}
+	.sw-title3-box {
+		white-space: nowrap;
+		width: 400px;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		color: #fff;
+	}
+	.sw-articles-item {
+		bottom: 10%;
+		left: 5%;
+	}
+	.swiper-button-next , .swiper-button-prev {
+		position: relative ;
+	}
+	.swiper-button-prev:after , .swiper-button-next:after {
+		content: '';
+	}
+	.sw-prev , .sw-next{
+		width: 150px;
+		left: 0;
+		right: 0;
+	}
+	.swiper-button-next.swiper-button-disabled, .swiper-button-prev.swiper-button-disabled {
+		opacity: 1;
+	}
+	.articles-title {
+		white-space: nowrap; 
+		width: 100%; 
+		overflow: hidden;
+		text-overflow: ellipsis; 
+	}
+	.articles-title2 {
+		white-space: nowrap; 
+		width: 250px; 
+		overflow: hidden;
+		text-overflow: ellipsis; 
+	}
+	.articles-title3 {
+		font-size: 14px;
+		font-weight: 600;
+		color: #151411;
+		margin-bottom: 0;
+	}
+	.articles-title4 {
+		font-size: 14px;
+		color: #AFADB5;
+	}
+	.articles-title6 {
+		font-size: 44px;
+		color: #151411;
+		font-weight: 700;
+		margin-bottom: 0;
+	}
+	.articles-title7 {
+		padding: 0 60px;
+		background-color: #518581;
+	}
+	.articles-img {
+		width: 28px;
+		height: 28px;
+	}
+	.articles-img-box {
+		width: 200px;
+		flex-shrink: 0;
+	}
+	.articles-item2 {
+		justify-content: end;
+		align-items: center;
+	}
+	.articles-icon-right {
+		color: #fff;
+	}
+	.articles-crossbar {
+		height: 2px;
+		background-color: #ECE4DE;
+	}
+	/*footer*/
+	.ft-box {
+		margin-left: 80px;
+	}
+	.ft-title-box {
+		list-style: none;
+	}
+	.ft-title {
+		font-size: 20px;
+		font-weight: 700;
+		color: #151411;
+	}
+	.ft-title2 {
+		font-weight: 500;
+		font-size: 18px;
+		color: #151411;
+	}
+	.ft-title3 {
+		margin-bottom: 0;
+		font-size: 18px;
+		color: #151411;
+	}
+	.ft-group {
+		justify-content: end;
+	}
+	.ft-title3-box {
+		width: 330px;
+	}
 }
-.header-box {
-	border-bottom: 1px #ccc solid;
-	margin-bottom: 60px;
+@media (min-width: 768px) {
+	.hd-title3 {
+		font-size: 16px;
+	}
+	.slide-title2 {
+		font-size: 23px;
+	}
+	.ctn-bn {
+		margin-bottom: 80px;
+	}
+	.ctn-title {
+		font-size: 45px;
+	}
+	.ctn-title-box {
+		margin-bottom: 30px;
+	}
+	.ctn-sao {
+		top: 65%;
+		transform: translateY(-65%);
+		right: 19%;
+	}
+	.ctn-vong {
+		width: 60px;
+		left: 5%;
+		top: 20%;
+    	transform: translate(-5%, -20%);
+	}
+	.ctn-input {
+		width: 600px;
+    	height: 60px;
+	}
+	.ctn-title-box2 {
+		height: 30px;
+	}
+	.ctn-title3 {
+		line-height: 30px;
+	}
+	.ctn-title4 {
+		font-size: 35px;
+		line-height: 1.2;;
+	}
+	.ctn-title5 {
+		font-size: 16px;
+	}
+	.ctn-title6 {
+		font-size: 22px;
+	}
+	.ctn-title7 {
+		font-size: 13px;
+	}
+	.ourproduct-bn-title {
+		width: 320px;
+	}
+	.ourproduct-title3-box {
+		padding: 10px 34px;
+	}
+	.ourproduct-title {
+		margin-left: 0;
+	}
+	.ourproduct-title2 {
+		font-size: 30px;
+	}
+	.slide-title {
+		font-size: 16px;
+	}
+	.ourproduct-img {
+		width: 320px;
+		height: 140px;
+	}
+	.ourproduct-img2 {
+		width: 320px;
+		height: 374px;
+	}
+	.ourslide-title-box {
+		width: 342px;
+	}
+	.ft-group {
+		justify-content: start;
+	}
+	.ft-box {
+		margin-left: 0;
+		margin-right: 80px;
+	}
 }
-.hd-title-box {
-	margin-bottom: 0;
+@media (min-width: 992px) {
+	.ourproduct-img {
+		width: 440px;
+		height: 214px;
+	}
+	.ourproduct-img2 {
+		width: 440px;
+		height: 500px;
+	}
+	.ctn-vong {
+		width: 90px;
+		left: 5%;
+		top: 80%;
+		transform: translate(-5%, -80%);
+	}
+	.ctn-input {
+		width: 750px;
+		height: 80px;
+	}
+	.ctn-title-box2 {
+		height: 46px;
+	}
+	.ctn-title3 {
+		line-height: 46px;
+	}
+	.ctn-sao {
+		top: 70%;
+		transform: translateY(-70%);
+		right: 17%;
+	}
 }
-.hd-title {
-	color: #151411;
-	font-size: 22px;
-	font-weight: 600;
+@media (min-width: 1200px) {
+	.hd-title3 {
+		font-size: 18px;
+	}
+	.slide-title2 {
+		font-size: 26px;
+	}
+	.ctn-bn {
+		margin-bottom: 80px;
+	}
+	.ctn-title {
+		font-size: 64px;
+	}
+	.ctn-title-box {
+		margin-bottom: 50px;
+	}
+	.ctn-sao {
+		top: 60%;
+		transform: translateY(-60%);
+		right: 3%;
+	}
+	.ctn-vong {
+		width: 100px;
+		left: 15%;
+		top: 80%;
+		transform: translate(-15%, -80%);
+	}
+	.ctn-input {
+		width: 810px;
+    	height: 84px;
+	}
+	.ctn-title-box2 {
+		height: 54px;
+	}
+	.ctn-title3 {
+		line-height: 55px;
+	}
+	.ctn-title4 {
+		font-size: 44px;
+		line-height: 1.2;
+	}
+	.ctn-title5 {
+		font-size: 18px;
+	}
+	.ctn-title6 {
+		font-size: 24px;
+	}
+	.ctn-title7 {
+		font-size: 17px;
+	}
+	.ourproduct-bn-title {
+		width: 550px;
+	}
+	.ourproduct-title3-box {
+		padding: 10px 34px;
+	}
+	.ourproduct-title {
+		margin-left: 50px ;
+	}
+	.ourproduct-title2 {
+		font-size: 44px;
+	}
+	.slide-title {
+		font-size: 18px;
+	}
+	.ourproduct-img {
+		width: 540px;
+    	height: 274px;
+	}
+	.ourproduct-img2 {
+		width: 540px;
+    	height: 500px;
+	}
+	.ourslide-title-box {
+		width: 497px;
+	}
+	.ft-group {
+		justify-content: end;
+	}
+	.ft-box {
+		margin-left: 80px;
+		margin-right: 0;
+	}
 }
-.hd-title2 {
-	list-style: none;
-}
-.hd-title3 {
-	color: black;
-	font-size: 18px;
-}
-/*ctn-box-item*/
-.ctn-box-item {
-	width: 724px;
-	text-align: center;
-}
-.ctn-title-box {
-	margin-bottom: 50px;
-}
-.ctn-title {
-	font-size: 64px;
-	margin-bottom: 0;
-}
-.ctn-title2 {
-	color: #AFADB5;
-	font-size: 18px;
-}
-.ctn-input {
-	width: 810px;
-	height: 84px;
-	border: none;
-	outline: none;
-	box-shadow: 2px 2px 10px #ccc;
-	padding-left: 90px;
-	font-size: 18px;
-}
-.ctn-input-box {
-	top: 0;
-	left: 50%;
-	transform: translateX(-50%);
-}
-.ctn-img-box2 {
-	top: 50%;
-    left: 5%;
-    transform: translateY(-50%);
-    width: 32px;
-}
-.ctn-title-box2{
-	top: 50%;
-	transform: translateY(-50%);
-	right: 5%;
-	background: #518581;
-	width: 170px;
-	height: 54px;
-}
-.ctn-title3 {
-	color: #fff;
-	line-height: 55px;
-	font-size: 18px;
-	font-weight: 600;
-}
-.ctn-seach {
-	margin-bottom: 120px;
-}
-/*ctnbn*/
-.ctn-bn-box {
-	color: #FFB23F;
-	font-size: 18px;
-}
-.ctn-bn {
-	margin-bottom: 150px;
-}
-.ctn-bn-title4 , .ctn-bn-title5 {
-	width: 400px;
-}
-.ctn-title4 {
-	font-size: 44px;
-	font-weight: 600;
-	color: black;
-	margin-bottom: 0;
-}
-.ctn-title5 {
-	font-size: 18px;
-	color: #AFADB5;
-}
-.ctn-title6 {
-	font-size: 24px;
-	font-weight: 600;
-}
-.ctn-title7 {
-	font-size: 18px;
-	color: #AFADB5;
-}
-/*ctn-box-img*/
-.ctn-box-item2 {
-	box-shadow: 1px 1px 8px #ccc;
-	height: 285px;
-}
-.ctn-box-item3 {
-	margin-left: 20px;
-}
-.ctn-box-img {
-	width: 62px;
-	padding-top: 30px;
-}
-/*product*/ 
-.product-box-title {
-	font-size: 44px;
-	color: #151411;
-	font-weight: 600;
-}
-.product-box-title2 {
-	width: 656px;
-	text-align: center;
-}
-.product-title {
-	font-size: 18px;
-	color: #AFADB5;
-}
-/*slide*/
-.slide-box {
-	margin-bottom: 100px;
-}
-.sw-item {
-	width: 330px;
-	height: 320px;
-}
-.slide-title {
-	font-size: 18px;
-	color: #AFADB5;
-}
-.slide-title2 {
-	font-size: 26px;
-	font-weight: 700;
-	color: #151411;
-	margin-bottom: 0;
-}
-.slide-title3 {
-	font-size: 24px;
-	color: #151411;
-	font-weight: 700;
-}
-/*ourproduct-bn-title*/
-.ourproduct {
-	margin-bottom: 100px;
-}
-.ourproduct-bn-title {
-	width: 450px;
-}
-.ourproduct-title {
-	flex-direction: column;
-	text-align: center;
-	margin-left: 50px;
-}
-.ourproduct-title2 {
-	font-size: 44px;
-	color: #151411;
-	font-weight: 600;
-}
-.ourproduct-title3-box {
-    background: #518581;
-    padding: 18px 34px;
-    text-align: center;
-}
-.ourproduct-img {
-	width: 540px;
-	height: 260px;
-}
-.ourproduct-img2 {
-	width: 540px;
-	height: 500px;
-}
-.ourproduct-img3 {
-	width: 50px;
-}
-.ourslide-item {
-	box-shadow: 2px 2px 10px #ccc;
-}
-/*ourslide-title-box*/
-.ourslide-title-box {
-	width: 497px;
-}
-.ourslide-item {
-	width: 600px;
-	padding: 20px;
-}
-
-
-
 
